--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>En tryggare väg</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.ico" />
-  <script src="https://kit.fontawesome.com/a2d9d5a4a0.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
   <header>
     <div class="header-content">
-      <img src="jag.jpg" alt="Profilbild" class="profile-img" />
+      <img src="jag.jpg" alt="Profilbild" class="profile-img">
       <div class="header-text">
         <h1>En tryggare väg</h1>
         <p>Stöd och samtal för dig som behöver en förändring</p>
@@ -22,13 +24,12 @@
   <main>
     <section class="profile">
       <div class="om-mig-header">
-        <i class="fas fa-person-meditating"></i>
+        <i class="fas fa-person-praying"></i>
         <h2>Om mig</h2>
       </div>
-      <p>Jag erbjuder samtalsstöd med fokus på ångest, stress och livets utmaningar. Med evidensbaserade metoder som ACT, KBT och MCT skapar vi tillsammans en trygg väg framåt.</p>
+      <p>Jag erbjuder samtalsstöd med fokus på ångest, stress och livets utmaningar. Med evidensbaserade metoder som ACT, KBT och MCT skapar vi tillsammans en trygg väg framåt. Jag tror på trygghet, empati och att varje människa har möjlighet till förändring och helande i sin egen takt.</p>
       <div class="meditationsfigur">
-        <i class="fas fa-person-meditating"></i>
-        <p>Inre stillhet börjar med ett andetag.</p>
+        <img src="meditation.svg" alt="Meditationsfigur">
       </div>
     </section>
 
@@ -47,7 +48,7 @@
         <div class="service">
           <i class="fas fa-compass"></i>
           <h3>Coaching</h3>
-          <p>Har du fastnat i vardagen eller i din utveckling? Coaching hjälper dig att hitta nästa steg.</p>
+          <p>Känner du att du kört fast? Coaching hjälper dig att hitta nya vägar och utvecklas vidare.</p>
         </div>
         <div class="service">
           <i class="fas fa-comments"></i>
@@ -78,4 +79,5 @@
     <p>&copy; 2025 En tryggare väg</p>
   </footer>
 </body>
+
 </html>
