--- a/index.html
+++ b/index.html
@@ -2,58 +2,67 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>En tryggare väg</title>
-  <link rel="stylesheet" href="style.css"/>
-  <link rel="icon" href="shield.png" type="image/png"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>En Tryggare Väg</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="shield.svg" type="image/svg+xml">
+  <script src="https://kit.fontawesome.com/8fa2042737.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
-    <h1>En tryggare väg</h1>
-    <button onclick="toggleLanguage()">English</button>
+    <h1>En Tryggare Väg</h1>
+    <button onclick="toggleLanguage()">EN / SV</button>
   </header>
-  <main>
+
+  <main id="content">
     <section class="grid">
       <div class="card">
-        <i class="fas fa-bolt"></i>
+        <i class="fas fa-user-injured"></i>
         <h2>Ångesthantering</h2>
-        <p>Stöd och verktyg för att hantera din ångest och återta kontrollen.</p>
+        <p>Stöd i att hantera oro, ältande och grubblande.</p>
+      </div>
+      <div class="card">
+        <i class="fas fa-cloud-showers-heavy"></i>
+        <h2>Depression</h2>
+        <p>När livet känns tungt och energin tryter.</p>
       </div>
       <div class="card">
         <i class="fas fa-comments"></i>
         <h2>Samtalsstöd</h2>
-        <p>Närvarande samtal som möter dig där du är, oavsett livssituation.</p>
-      </div>
-      <div class="card">
-        <i class="fas fa-cloud"></i>
-        <h2>Depression</h2>
-        <p>För dig som kämpar i mörkret – du behöver inte göra det ensam.</p>
+        <p>Trygga samtal med fokus på din utveckling.</p>
       </div>
       <div class="card">
         <i class="fas fa-chalkboard-teacher"></i>
         <h2>Coaching</h2>
-        <p>För dig som vill utvecklas, hitta mening eller byta riktning i livet.</p>
+        <p>Stöd för dig som vill ta nästa steg i livet eller arbetslivet.</p>
       </div>
     </section>
+
     <section class="about">
-      <div class="about-image">
-        <img src="shield.png" alt="Trygg symbol"/>
-      </div>
-      <div class="about-text">
-        <h2>Om mig</h2>
-        <p>Jag erbjuder ett tryggt samtalsrum för vuxna, par och organisationer. Med erfarenhet och förståelse möter jag dig där du är i livet. Arbetet grundar sig i evidensbaserade och beprövade metoder med fokus på att skapa varaktig förändring.</p>
+      <div class="about-container">
+        <img src="shield.svg" alt="Trygghetssymbol" class="about-img" />
+        <div>
+          <h2>Om mig</h2>
+          <p>Jag erbjuder samtalsstöd och coaching baserat på evidens och beprövade metoder. Jag möter vuxna, par och organisationer som söker hjälp för psykisk ohälsa eller som vill utvecklas och ta nästa steg.</p>
+        </div>
       </div>
     </section>
+
     <section class="contact">
       <h2>Kontakta mig</h2>
-      <form action="https://formspree.io/f/xoqgzvkj" method="POST">
-        <input type="text" name="name" placeholder="Ditt namn" required/>
-        <input type="email" name="email" placeholder="Din e-post" required/>
+      <form action="https://formspree.io/f/mwkdglky" method="POST">
+        <input type="text" name="name" placeholder="Ditt namn" required />
+        <input type="email" name="email" placeholder="Din e-post" required />
         <textarea name="message" placeholder="Ditt meddelande" required></textarea>
         <button type="submit">Skicka</button>
       </form>
     </section>
   </main>
+
+<script>
+  function toggleLanguage() {
+    alert("Den engelska versionen kommer snart!");
+  }
+</script>
 </body>
 </html>
