--- a/index.html
+++ b/index.html
@@ -2,71 +2,79 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>En tryggare väg</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="skold.svg" />
-  <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+  <link rel="icon" type="image/svg+xml" href="skold.svg" />
+  <script src="https://kit.fontawesome.com/4f3bfc0835.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
-    <h1>En tryggare väg</h1>
-    <button onclick="toggleLanguage()">🌍 English</button>
+    <div class="header-content">
+      <img src="jag.jpg" alt="Profilbild" class="profilbild">
+      <h1>En tryggare väg</h1>
+      <button onclick="toggleLanguage()" class="lang-btn">EN / SV</button>
+    </div>
   </header>
 
   <main>
     <section class="grid">
       <div class="card">
-        <i class="fas fa-user-mind"></i>
-        <h2 data-sv="Ångesthantering" data-en="Anxiety Management">Ångesthantering</h2>
+        <i class="fas fa-user-circle"></i>
+        <h2 data-sv="Samtalsstöd" data-en="Talk Support">Samtalsstöd</h2>
+        <p data-sv="För dig som söker stöd i en trygg miljö." data-en="For those seeking support in a safe space.">För dig som söker stöd i en trygg miljö.</p>
       </div>
       <div class="card">
-        <i class="fas fa-comment-dots"></i>
-        <h2 data-sv="Samtalsstöd" data-en="Counselling">Samtalsstöd</h2>
-      </div>
-      <div class="card">
-        <i class="fas fa-people-arrows"></i>
-        <h2 data-sv="Coaching" data-en="Coaching">Coaching</h2>
+        <i class="fas fa-brain"></i>
+        <h2 data-sv="Ångesthantering" data-en="Anxiety Support">Ångesthantering</h2>
+        <p data-sv="Lär dig hantera oro, ältande och inre stress." data-en="Learn to manage rumination and inner stress.">Lär dig hantera oro, ältande och inre stress.</p>
       </div>
       <div class="card">
         <i class="fas fa-cloud-rain"></i>
         <h2 data-sv="Depression" data-en="Depression">Depression</h2>
+        <p data-sv="När livet känns tungt – du behöver inte bära det själv." data-en="When life feels heavy – you don't have to carry it alone.">När livet känns tungt – du behöver inte bära det själv.</p>
+      </div>
+      <div class="card">
+        <i class="fas fa-chalkboard-teacher"></i>
+        <h2 data-sv="Coaching" data-en="Coaching">Coaching</h2>
+        <p data-sv="För dig som vill ta nästa steg i livet." data-en="For those who want to move forward in life.">För dig som vill ta nästa steg i livet.</p>
       </div>
     </section>
 
-    <section class="about">
-      <img src="jag.jpg" alt="Profilbild" class="profile-pic" />
-      <div>
-        <h2 data-sv="Om mig" data-en="About Me">Om mig</h2>
-        <p data-sv="Jag erbjuder samtalsstöd för vuxna, par och organisationer. Fokus ligger på psykisk hälsa, personlig utveckling och ett tryggt bemötande. Arbetet utgår från evidensbaserade metoder." 
-           data-en="I offer support for individuals, couples, and organizations. The focus is on mental well-being, personal development, and creating a safe space. I work with evidence-based practices.">
-          Jag erbjuder samtalsstöd för vuxna, par och organisationer. Fokus ligger på psykisk hälsa, personlig utveckling och ett tryggt bemötande. Arbetet utgår från evidensbaserade metoder.
-        </p>
+    <section class="about-section">
+      <div class="about-container">
+        <img src="skold.svg" alt="Sköldsymbol" class="about-image" />
+        <div class="about-text">
+          <h2 data-sv="Om mig" data-en="About Me">Om mig</h2>
+          <p data-sv="Jag erbjuder stöd till vuxna, par och organisationer. Här får du möta en trygg samtalsmiljö, oavsett om du söker hjälp för psykisk ohälsa eller personlig utveckling. Arbetet grundar sig på evidens och beprövade metoder." 
+             data-en="I support adults, couples, and organizations. You'll find a safe therapeutic space, whether you're struggling with mental health or seeking personal growth. My work is based on evidence and proven methods.">
+            Jag erbjuder stöd till vuxna, par och organisationer. Här får du möta en trygg samtalsmiljö, oavsett om du söker hjälp för psykisk ohälsa eller personlig utveckling. Arbetet grundar sig på evidens och beprövade metoder.
+          </p>
+        </div>
       </div>
     </section>
 
     <section class="contact">
       <h2 data-sv="Kontakta mig" data-en="Contact Me">Kontakta mig</h2>
-      <form action="https://formspree.io/f/YOUR-ID-HERE" method="POST">
-        <input type="text" name="name" placeholder="Namn" required />
-        <input type="email" name="email" placeholder="E-post" required />
-        <textarea name="message" placeholder="Meddelande" required></textarea>
+      <form action="https://formspree.io/f/mnqeybwp" method="POST">
+        <input type="text" name="name" placeholder="Namn" required>
+        <input type="email" name="email" placeholder="E-post" required>
+        <textarea name="message" placeholder="Ditt meddelande" required></textarea>
         <button type="submit" data-sv="Skicka" data-en="Send">Skicka</button>
       </form>
     </section>
   </main>
 
   <footer>
-    <img src="skold.svg" alt="Trygghetssymbol" class="shield" />
-    <p>© En tryggare väg</p>
+    <p>&copy; 2025 En tryggare väg</p>
   </footer>
 
   <script>
     function toggleLanguage() {
-      const elements = document.querySelectorAll("[data-en]");
+      const elements = document.querySelectorAll("[data-sv]");
       elements.forEach(el => {
-        const isSwedish = el.innerText === el.getAttribute("data-sv");
-        el.innerText = isSwedish ? el.getAttribute("data-en") : el.getAttribute("data-sv");
+        const current = el.textContent.trim();
+        el.textContent = current === el.dataset.sv ? el.dataset.en : el.dataset.sv;
       });
     }
   </script>
