--- a/index.html
+++ b/index.html
@@ -3,74 +3,61 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>En tryggare väg</title>
+  <title>En Tryggare Väg</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://kit.fontawesome.com/45c89313e0.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <script>
+    function switchLanguage() {
+      document.body.classList.toggle("en");
+    }
+  </script>
 </head>
 <body>
-
   <header>
     <div class="header-container">
-      <img src="jag.jpg" alt="Profilbild" class="profile-img" />
-      <h1>En tryggare väg</h1>
-      <button onclick="toggleLanguage()" class="lang-btn">🇬🇧</button>
+      <img src="jag.jpg" alt="Profilbild" class="profile-img">
+      <h1>En Tryggare Väg</h1>
+      <button onclick="switchLanguage()" class="lang-btn">English / Svenska</button>
     </div>
   </header>
 
-  <main>
-    <section class="services">
-      <div class="service">
-        <i class="fas fa-user-circle"></i>
-        <h2>Ångesthantering</h2>
-        <p>Känner du dig fast i oro eller ältande tankar? Här finns stöd att hitta balans.</p>
-      </div>
-      <div class="service">
-        <i class="fas fa-comments"></i>
-        <h2>Samtalsstöd</h2>
-        <p>När du behöver någon som lyssnar – tryggt, professionellt och utan krav.</p>
-      </div>
-      <div class="service">
-        <i class="fas fa-user-tie"></i>
-        <h2>Coaching</h2>
-        <p>För dig som vill ta nästa steg i livet, arbetet eller relationen.</p>
-      </div>
-      <div class="service">
-        <i class="fas fa-cloud"></i>
-        <h2>Depression</h2>
-        <p>Nedstämdhet, håglöshet eller tappad riktning – vi hittar vägen tillsammans.</p>
-      </div>
-    </section>
+  <section class="cards">
+    <div class="card">
+      <img src="icons/thinking.svg" alt="Ångesthantering" />
+      <h2>Ångesthantering</h2>
+      <p>För dig som kämpar med oro, ältande och inre stress.</p>
+    </div>
+    <div class="card">
+      <img src="icons/sad.svg" alt="Depression" />
+      <h2>Depression</h2>
+      <p>När vardagen känns tung, tom eller meningslös – här får du stöd att börja om.</p>
+    </div>
+    <div class="card">
+      <img src="icons/mentorship.svg" alt="Coaching" />
+      <h2>Coaching & Utveckling</h2>
+      <p>För dig som vill växa, ta steg framåt och hitta en tydligare riktning.</p>
+    </div>
+    <div class="card">
+      <img src="icons/chat.svg" alt="Samtalsstöd" />
+      <h2>Samtalsstöd</h2>
+      <p>Ibland räcker det att någon lyssnar. Vi möts i samtal – utan krav.</p>
+    </div>
+  </section>
 
-    <section class="about">
-      <div class="about-card">
-        <img src="shield.svg" alt="Trygghetssymbol" class="about-icon" />
-        <div>
-          <h2>Om mig</h2>
-          <p>Jag erbjuder samtalsstöd och coaching för vuxna, par och organisationer. Arbetet utgår från trygghet, respekt och evidensbaserade metoder. Tillsammans skapar vi en plats för riktning, utveckling och återhämtning.</p>
-        </div>
+  <section class="about">
+    <div class="about-container">
+      <img src="images/shield.png" alt="Trygghetssymbol" />
+      <div class="about-text">
+        <h2>Om mig</h2>
+        <p>Jag erbjuder professionellt samtalsstöd till vuxna, par och organisationer.  
+        Arbetet utgår alltid från beprövade och evidensbaserade metoder – i en trygg och respektfull relation.</p>
       </div>
-    </section>
-
-    <section class="contact">
-      <h2>Kontakta mig</h2>
-      <form action="https://formspree.io/f/mlekzqyo" method="POST">
-        <input type="text" name="name" placeholder="Ditt namn" required>
-        <input type="email" name="email" placeholder="Din e-post" required>
-        <textarea name="message" placeholder="Ditt meddelande" required></textarea>
-        <button type="submit">Skicka</button>
-      </form>
-    </section>
-  </main>
+    </div>
+  </section>
 
   <footer>
-    <p>&copy; 2025 En tryggare väg</p>
+    <p>Kontakta mig på <a href="mailto:kontakt@entryggarevag.se">kontakt@entryggarevag.se</a></p>
   </footer>
-
-  <script>
-    function toggleLanguage() {
-      alert("Den engelska versionen är under utveckling.");
-    }
-  </script>
-
 </body>
 </html>
